syntax = "proto3";

package user;

service UserService {
  rpc Create(CreateUserRequest) returns (UserResponse){}
  rpc FindOne(UserId) returns (UserResponse){}
  rpc FindAll(Empty) returns (ListUserResponse){}
  rpc Update(UpdateUserRequest) returns (UserResponse){}
  rpc Delete(UserId) returns (Empty){}
}

message CreateUserRequest {
  string name = 1;
  string document = 2;
  string birthDate = 3;
  repeated BasePhone phones = 4;
  repeated string addresses = 5;
}

message BasePhone {
  string number = 1;
  string areaCode = 2;
  string countryCode = 3;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string document = 3;
  string birthDate = 4;
  repeated BasePhone phones = 5;
  repeated string addresses = 6;
}

message UserId {
  int32 id = 1;
}

message Empty {}

message ListUserResponse {
  repeated UserResponse user = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string document = 3;
  string birthDate = 4;
  repeated BasePhone phones = 5;
  repeated string addresses = 6;
}